# richard-cli-utilities

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/rcli/core/: keyboard.h  license.h  logger.h  signals.h  terminal.h  utils.h
src/: main.cc
src/core/: CMakeLists.txt  keyboard.cc  license.cc  logger.cc  signals.cc  terminal.cc  utils.cc
src/tools/clock/: CMakeLists.txt  clock_app.cc
